Updated dates for Rubyconf and Gopherconf India

--- a/about.html
+++ b/about.html
@@ -170,9 +170,9 @@ permalink: /about
                         <h3>Conferences</h3>
                         <p>Upcoming conferences are:</p>
                         <ul>
-                          <li><a href="https://www.deccanrubyconf.org/" target="_blank" title="Deccan RubyConf India"><strong>Deccan RubyConf India</strong></a>: 10 Aug, 2019</li>
-                          <li><a href="https://www.droidjam.in" target="_blank" title="DroidJam India"><strong>DroidJam India</strong></a>: 30, 31 Aug, 2019 - 2nd Edition</li>
-                        <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India"><strong>DevOpsDays India</strong></a>: 13, 14 Sept, 2019 - 8th Edition</li>
+                            <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India 2019"><strong>DevOpsDays India</strong></a>: 13, 14 Sept, 2019</li>
+                            <li><a href="https://gopherconindia.com/" target="_blank" title="GopherCon India 2020"><strong>GopherCon India</strong></a>: 11, 12 Jan, 2020</li>
+                            <li><a href="https://rubyconfindia.com" target="_blank" title="RubyConf India 2020"><strong>RubyConf India</strong></a>: 15, 16 Feb 2020</li>
                         </ul>
                         <p>Our past conferences are:</p>
                         <ul>
