--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ permalink: /
               Next.Events
             </p>
             <ul class="animated fadeInUp next-event-list">
-              <li><a href="https://www.deccanrubyconf.org/" target="_blank" title="Deccan RubyConf 2019">Deccan RubyConf<br><span class="date">10 Aug, 2019</span></a></li>
-              <li><a href="https://www.droidjam.in/" target="_blank" title="DroidJam India 2019">DroidJam<br><span class="date">30, 31 Aug 2019</span></a></li>
               <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India 2019">DevOpsDays India<br><span class="date">13, 14 Sept, 2019</span></a></li>
+              <li><a href="https://gopherconindia.com/" target="_blank" title="GopherCon India 2020">GopherCon India<br><span class="date">11, 12 Jan, 2020</span></a></li>
+              <li><a href="https://rubyconfindia.com" target="_blank" title="RubyConf India 2020">RubyConf India<br><span class="date">15, 16 Feb 2020</span></a></li>
             </ul>
           </center>
         </div>
