Updated favicon and dates of GCI20 & RCI20

--- a/about.html
+++ b/about.html
@@ -170,12 +170,12 @@ permalink: /about
                         <h3>Conferences</h3>
                         <p>Upcoming conferences are:</p>
                         <ul>
-                            <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India 2019"><strong>DevOpsDays India</strong></a>: 13, 14 Sept, 2019</li>
-                            <li><a href="https://gopherconindia.com/" target="_blank" title="GopherCon India 2020"><strong>GopherCon India</strong></a>: 11, 12 Jan, 2020</li>
-                            <li><a href="https://rubyconfindia.com" target="_blank" title="RubyConf India 2020"><strong>RubyConf India</strong></a>: 15, 16 Feb 2020</li>
+                            <li><a href="https://www.townscript.com/e/gci20/" target="_blank" title="GopherCon India 2020"><strong>GopherCon India</strong></a>: 28, 29 March, 2020</li>
+                            <li><a href="https://www.townscript.com/e/rci20/" target="_blank" title="RubyConf India 2020"><strong>RubyConf India</strong></a>: 25, 26 April 2020</li>
                         </ul>
                         <p>Our past conferences are:</p>
                         <ul>
+                        <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India 2019"><strong>DevOpsDays India</strong></a>: 13, 14 Sept, 2019</li>
                           <li><a href="https://gopherconindia.com/" target="_blank" title="Gophercon India"><strong>Gophercon India</strong></a>: January 18,19 2019 - 5th Edition</li>
                           <li><a href="https://www.rubyconfindia.org/" target="_blank" title="RubyConf India"><strong>RubyConf India</strong></a>: Jan 20,21 2019 - 10th Edition</li>
                           <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India"><strong>DevOpsDays India</strong></a>: Dec 8,9 2018 - 7th Edition</li>
