--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@ permalink: /
               Next.Events
             </p>
             <ul class="animated fadeInUp next-event-list">
-              <li><a href="https://devopsdaysindia.org/" target="_blank" title="DevOpsDays India 2019">DevOpsDays India<br><span class="date">13, 14 Sept, 2019</span></a></li>
-              <li><a href="https://gopherconindia.com/" target="_blank" title="GopherCon India 2020">GopherCon India<br><span class="date">11, 12 Jan, 2020</span></a></li>
-              <li><a href="https://rubyconfindia.com" target="_blank" title="RubyConf India 2020">RubyConf India<br><span class="date">15, 16 Feb 2020</span></a></li>
+              <li><a href="https://www.townscript.com/e/gci20/" target="_blank" title="GopherCon India 2020">GopherCon India<br><span class="date">28, 29 March, 2020</span></a></li>
+              <li><a href="https://www.townscript.com/e/rci20/" target="_blank" title="RubyConf India 2020">RubyConf India<br><span class="date">25, 26 April 2020</span></a></li>
             </ul>
           </center>
         </div>
