Updated Golang Girl pune date

--- a/about.html
+++ b/about.html
@@ -55,13 +55,13 @@ permalink: /about
                             <div class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <center>
                                     <div class="col-xs-12">
-                                        <img src="{{ site.url }}/img/team/1.jpg" alt="Satish Talim">
                                     </div>
                                     <div class="col-xs-12">
                                         <span class="pname">Satish Talim</span>
                                     </div>
                                     <div class="col-xs-12">
                                         <span class="pfunction">Trustee</span>
+                                        <img src="{{ site.url }}/img/team/1.jpg" alt="Satish Talim">
                                     </div>
                                     <div class="col-xs-12">
                                         <center>
@@ -185,11 +185,11 @@ permalink: /about
                         <h3>Events or Workshops</h3>
                         <p>Our upcoming workshops are:</p>
                         <ul>
-                          <li><strong>Go Girls Pune</strong>: TBA</li>
                           <li><strong>Go Girls Bangalore</strong>: TBA</li>
                         </ul>
                         <p>Our past workshops are:</p>
                         <ul>
+                          <li><a href="https://www.townscript.com/e/go-girls-pune-2019" target="_blank" title="Go Girls Pune"><strong>Go Girls Pune</strong></a>: Nov 19, 2019 - 2nd edition</li>
                           <li><a href="http://railsgirls.com/pune.html" target="_blank" title="Rails Girls Pune"><strong>Rails Girls Pune</strong></a>: Feb 3, 2019</li>
                           <li><a href="https://www.townscript.com/e/go-girls-pune" target="_blank" title="Go Girls Pune"><strong>Go Girls Pune</strong></a>: Nov 25, 2018 - 1st edition</li>
                           <li><a href="https://www.townscript.com/e/go-girls-bengaluru" target="_blank" title="Go Girls Bengaluru"><strong>Go Girls Bengaluru</strong></a>: Dec 2, 2018 - 1st edition</li>
